--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: lambdapath
+service: lambdapathprod
 # app and org for use with dashboard.serverless.com
 #app: your-app-name
 #org: your-org-name
@@ -23,8 +23,8 @@ frameworkVersion: '3'
 provider:
   name: aws
   runtime: nodejs14.x
-  stage: dev
-  region: eu-central-1
+  stage: prod
+  region: us-west-1
   apiGateway:
     binaryMediaTypes:
       - '*/*'
